unpackaged/main/default/objects/Lead_Related_Tracking__c/Lead_Related_Tracking__c.object-meta.xml
<CustomObject>
    <label>Lead Related Tracking</label>
    <nameField>
        <displayFormat>LRT-{0000000}</displayFormat>
        <label>Lead Related Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Related Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>