unpackaged/main/default/objects/Lead_Related_Tracking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Related Trackings</relationshipLabel>
    <relationshipName>Lead_Related_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>