unpackaged/main/default/objects/Lead_Related_Tracking__c/fields/MDR_First_call_date__c.field-meta.xml
<CustomField>
    <fullName>MDR_First_call_date__c</fullName>
    <description>Holds date/time when MDR rep completed first activity.</description>
    <label>MDR First call date</label>
    <type>DateTime</type>
</CustomField>