unpackaged/main/default/objects/Lead_Related_Tracking__c/fields/MQL_Datetime__c.field-meta.xml
<CustomField>
    <fullName>MQL_Datetime__c</fullName>
    <label>MQL Datetime</label>
    <type>DateTime</type>
</CustomField>