unpackaged/main/default/objects/Lead_Related_Tracking__c/fields/Unique_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Lead_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Lead Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>